--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,10 @@
 /*
   1. Use a more-intuitive box-sizing model.
 */
+*{
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+}
+
 *, *::before, *::after {
   box-sizing: border-box;
 }
